ui/src/styles/main.css
* {
    box-sizing: border-box;
}

html, body, #app {
    height: 100%;
}

html {
    --font-monospace: Menlo, Monaco, Consolas, 'Droid Sans Mono', 'Courier New', monospace,
    'Droid Sans Fallback';
    --font-default: -apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', 'HelveticaNeue-Light',
    'Ubuntu', 'Droid Sans', sans-serif;
    --font-ligatures: normal;
    --default-border-color: lightgrey;
    --base-color-success: #0cbb52;
    --base-color-info: #097bed;
    --base-color-warning: #ffb400;
    --base-color-error: #eb2013;
}

body {
    font-family: var(--font-default);
    font-size: 13px;
}

::-webkit-scrollbar {
    width: 9px;
    height: 5px;
    background-color: #f3f2f2;
}

::-webkit-scrollbar-thumb {
    background: #dfdfdf;
    height: 70%;
}

.request-method--GET {
    color: var(--base-color-success);
}

.request-method--PUT {
    color: var(--base-color-info);
}

.request-method--POST {
    color: var(--base-color-warning);
}

.request-method--DELETE {
    color: var(--base-color-error);
}

